linuxmuster-linbo (2.3.1-0) babo62; urgency=low

  * added linbo iso file creation (closes #611).
  * added non pae kernel (closes #417).
  * fixed recognition of windows efi systems (closes #609 & #612).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 25 Jul 2016 21:34:26 +0200

linuxmuster-linbo (2.3.0-38) babo62; urgency=low

  * added several new start icons.
  * remote cache writable fix (closes #608).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 18 Jul 2016 18:44:50 +0200

linuxmuster-linbo (2.3.0-37) babo62; urgency=low

  * linbo_cmd.sh syncl(), newdev-patch.bvi: fixes due to changed bvi syntax.
  * linbo_cmd.sh format(): added 5 secs waiting time if partition is not yet available.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 01 Jul 2016 10:15:56 +0200

linuxmuster-linbo (2.3.0-36) babo62; urgency=low

  * initramfs.conf: fixed linbo_gui32 path.
  * updated to xenial build environment, build process consolidation.
  * updated to lts kernel 4.4.14.
  * linbo_cmd.sh: modified ctorrent options for performance tests.
  * adding REANNOUNCE_INTERVAL=60 to bittorrent options.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 30 Jun 2016 12:20:14 +0200

linuxmuster-linbo (2.3.0-35) babo62; urgency=low

  * linbo_cmd.sh:
    - Fixed utf8 encoding of special chars.
    - Fixed console message if no windows reactivation data could be downloaded.
    - Added fstype as cli parameter.
    - reworked syncl(), fixed bootloader stuff (closes #572).
    - reworked restore_winact().

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 25 Jun 2016 14:22:52 +0200

linuxmuster-linbo (2.3.0-34) babo-testing; urgency=low

  * Merge pull request #59 from Kistelini/feature/grub2:
    Fix encoding of linbo_cmd.sh (broken umlauts etc.),
    http://bit.ly/1ZK4Uhz

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 12 May 2016 21:19:29 +0200

linuxmuster-linbo (2.3.0-33) babo-testing; urgency=low

  * postinst: wallpaper fix, do not overwrite custom boot wallpaper.
